--- a/youtube-tweaks.user.styl
+++ b/youtube-tweaks.user.styl
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Youtube Tweaks
-@version        2.1.10
+@version        2.1.11
 @namespace      https://github.com/StylusThemes
 @description    Tweaks for Youtube!
 @author         StylusThemes <https://github.com/StylusThemes>
@@ -35,7 +35,7 @@
 
   #copyright div::after {
     white-space: pre;
-    content: "\aYoutube Tweaks - Version 2.1.10";
+    content: "\aYoutube Tweaks - Version 2.1.11";
   }
 
   if videos-per-row {
@@ -471,13 +471,15 @@
   }
 
   if hide-suggestion-cards {
-    .ytp-endscreen-content {
+    .ytp-endscreen-content,
+    .ytp-fullscreen-grid-stills-container {
       opacity: 0;
       transform: scale(0.95);
       transition: opacity 0.5s ease-out, transform 0.5s ease-out;
     }
 
-    .ytp-endscreen-content:hover {
+    .ytp-endscreen-content:hover,
+    .ytp-fullscreen-grid-stills-container:hover {
       opacity: 1;
       transform: scale(1);
     }
