Add temporary re-order of sidebar.

--- a/youtube-tweaks.user.styl
+++ b/youtube-tweaks.user.styl
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Youtube Tweaks
-@version        2.1.13
+@version        2.1.14
 @namespace      https://github.com/StylusThemes
 @description    Tweaks for Youtube!
 @author         StylusThemes <https://github.com/StylusThemes>
@@ -35,7 +35,7 @@
 
   #copyright div::after {
     white-space: pre;
-    content: "\aYoutube Tweaks - Version 2.1.13";
+    content: "\aYoutube Tweaks - Version 2.1.14";
   }
 
   if videos-per-row {
@@ -408,6 +408,38 @@
       bottom: 0;
       z-index: -1;
     }
+  }
+
+  /* Enable flex so reordering works */
+  #sections {
+    display: flex !important;
+    flex-direction: column !important;
+  }
+
+  /* Reset default order */
+  #sections > ytd-guide-section-renderer {
+    order: 0 !important;
+  }
+
+  /* Swap DOM #2 and #3 */
+  #sections > ytd-guide-section-renderer:nth-of-type(2) {
+    order: 3 !important;
+  }
+
+  #sections > ytd-guide-section-renderer:nth-of-type(3) {
+    order: 2 !important;
+  }
+
+  #sections > ytd-guide-section-renderer:nth-of-type(4) {
+    order: 4 !important;
+  }
+
+  #sections > ytd-guide-section-renderer:nth-of-type(5) {
+    order: 5 !important;
+  }
+
+  #sections > ytd-guide-section-renderer:nth-of-type(6) {
+    order: 6 !important;
   }
 }
 
