--- a/youtube-tweaks.user.styl
+++ b/youtube-tweaks.user.styl
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Youtube Tweaks
-@version        2.1.14
+@version        2.1.15
 @namespace      https://github.com/StylusThemes
 @description    Tweaks for Youtube!
 @author         StylusThemes <https://github.com/StylusThemes>
@@ -23,6 +23,7 @@
 @var checkbox hide-recommendations-bar "🚫 Hide recommendations topic bar" 0;
 @var checkbox hide-yt-posts "🚫 Hide latest YouTube posts" 0;
 @var checkbox restore-watched-badge "👀 Restore YouTube watched badge" 0;
+@var checkbox reorder-sidebar "🔀 Reorder sidebar sections" 0;
 
 @var checkbox enable-theater-mode "🎭 Enable fullscreen theater mode" 0;
 @var checkbox stretch-video "📺 Stretch video to fill player" 0;
@@ -36,7 +37,7 @@
 
   #copyright div::after {
     white-space: pre;
-    content: "\aYoutube Tweaks - Version 2.1.14";
+    content: "\aYoutube Tweaks - Version 2.1.15";
   }
 
   if videos-per-row {
@@ -418,36 +419,27 @@
     }
   }
 
-  /* Enable flex so reordering works */
-  #sections {
-    display: flex !important;
-    flex-direction: column !important;
-  }
+  if reorder-sidebar {
+    ytd-guide-renderer #sections {
+      display: flex !important;
+      flex-direction: column !important;
+    }
 
-  /* Reset default order */
-  #sections > ytd-guide-section-renderer {
-    order: 0 !important;
-  }
+    ytd-guide-renderer #sections > ytd-guide-section-renderer {
+      order: 3 !important;
+    }
 
-  /* Swap DOM #2 and #3 */
-  #sections > ytd-guide-section-renderer:nth-of-type(2) {
-    order: 3 !important;
-  }
+    ytd-guide-renderer #sections > ytd-guide-section-renderer:first-of-type {
+      order: 1 !important;
+    }
 
-  #sections > ytd-guide-section-renderer:nth-of-type(3) {
-    order: 2 !important;
-  }
+    ytd-guide-renderer #sections > ytd-guide-section-renderer:has(a[href = "/feed/you"]) {
+      order: 1 !important;
+    }
 
-  #sections > ytd-guide-section-renderer:nth-of-type(4) {
-    order: 4 !important;
-  }
-
-  #sections > ytd-guide-section-renderer:nth-of-type(5) {
-    order: 5 !important;
-  }
-
-  #sections > ytd-guide-section-renderer:nth-of-type(6) {
-    order: 6 !important;
+    ytd-guide-renderer #sections > ytd-guide-section-renderer:has(a[href = "/feed/subscriptions"]) {
+      order: 2 !important;
+    }
   }
 }
 
